kube_manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: butterfly-api
  namespace: butterfly-api
  labels:
    app: butterfly-api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: butterfly-api
